# web-api

./: Dockerfile  README.md  hezarfen.pkl  pyproject.toml  requirements.txt  sample.env  server.py
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: df389e3c55ee_initial_migration.py
datasets/: generated_dataset.csv  turkish_news.csv
outputs/: hezarfen.pkg
src/: main.py
src/application/dtos/requests/: add_data_dto.py  predict_request_dto.py  register_request_dto.py
src/application/dtos/requests/auth/: login_request_dto.py
src/application/services/: ai_services.py  auth_services.py
src/domain/common/: train_dataset.py  user.py
src/infrastructure/db/: database.py
src/infrastructure/db/repository/: base.py  train_repository.py  user_repository.py
src/presentation/: server.py
src/presentation/controllers/: ai_controller.py  auth_controller.py
